--- a/imports/ui/assets/css/colla-color.css
+++ b/imports/ui/assets/css/colla-color.css
@@ -10269,7 +10269,7 @@ hr {
   .icon i, .icon svg {
     font-size: auto-0.75; }
 
-.icon + .icon-text {
+/*.icon + .icon-text {
   padding-left: 1rem;
   width: calc(100% - auto - 1); }
 
@@ -10298,7 +10298,7 @@ hr {
     font-size: 1.125rem; }
 
 .icon-sm + .icon-text {
-  width: calc(100% - $icon-size-sm - 1); }
+  width: calc(100% - $icon-size-sm - 1); }*/
 
 .icon-shape {
   padding: 12px;
