--- a/imports/ui/assets/css/colla-color.css
+++ b/imports/ui/assets/css/colla-color.css
@@ -10269,9 +10269,9 @@ hr {
   .icon i, .icon svg {
     font-size: auto-0.75; }
 
-/*.icon + .icon-text {
+.icon + .icon-text {
   padding-left: 1rem;
-  width: calc(100% - auto - 1); }
+  /*width: calc(100% - auto - 1); */}
 
 .icon-xl {
   width: 5rem;
@@ -10280,7 +10280,7 @@ hr {
     font-size: 4.25rem; }
 
 .icon-xl + .icon-text {
-  width: calc(100% - $icon-size-xl - 1); }
+  /*width: calc(100% - $icon-size-xl - 1); */}
 
 .icon-lg {
   width: 3.7rem;
@@ -10289,7 +10289,7 @@ hr {
     font-size: 2.95rem; }
 
 .icon-lg + .icon-text {
-  width: calc(100% - $icon-size-lg - 1); }
+  /*width: calc(100% - $icon-size-lg - 1); */}
 
 .icon-sm {
   width: 1.875rem;
@@ -10298,7 +10298,7 @@ hr {
     font-size: 1.125rem; }
 
 .icon-sm + .icon-text {
-  width: calc(100% - $icon-size-sm - 1); }*/
+  /*width: calc(100% - $icon-size-sm - 1); */}
 
 .icon-shape {
   padding: 12px;
