Landing all done

--- a/imports/ui/assets/css/colla-color.css
+++ b/imports/ui/assets/css/colla-color.css
@@ -500,6 +500,10 @@ pre {
   margin-right: auto;
   margin-left: auto; }
 
+.canvas-container {
+  cursor: cell;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
